--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html ng-csp ng-app="Baroque">
+<html ng-app="Baroque" ng-csp>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
     <title>Baroque - Elysion</title>
-    <link rel="stylesheet" href="angular-csp.css">
+    <link rel="stylesheet" href="lib/angular-csp.css">
     <script src="lib/oauth.js"></script>
     <script src="lib/sha1.js"></script>
     <script src="lib/underscore-min.js"></script>
